# controllers/cartController.js
@@ -3,11 +3,11 @@ const cartService = require("../services/cart_service");
 
 exports.verifyUserRole = async function (req, res, next) {
   try {
-    const uid = req.params.userid;
+    const uid = req.loggedInUser;
     console.log("in controller");
-    const user = await helperService.verifyUser(uid);
-
-    if (!(user[0].role == "Consumer"))
+    const user = await helperService.verifyUser(uid._id);
+    console.log(user.role)
+    if (!(user.role == "Consumer"))
       throw {
         message: error.message,
       };
@@ -19,10 +19,10 @@ exports.verifyUserRole = async function (req, res, next) {
 
 exports.addProductToCart = async function (req, res) {
   try {
-    const userId = req.params.userid;
+    const userId = req.loggedInUser;
     const { productId, quantity } = req.body;
     console.log(userId, productId, quantity);
-    const result = await cartService.addToCart(userId, productId, quantity);
+    const result = await cartService.addToCart(userId._id, productId, quantity);
     res
       .status(200)
       .send({ message: "Product added to cart successfully", result });
@@ -33,9 +33,9 @@ exports.addProductToCart = async function (req, res) {
 
 exports.getCart = async function (req, res) {
   try {
-    const userId = req.params.userid;
+    const userId = req.loggedInUser;
     console.log("in controller");
-    const result = await cartService.getCart(userId);
+    const result = await cartService.getCart(userId._id);
     res.status(200).send(result);
   } catch (error) {
     console.log(error);
