# routes/orderRoutes.js
@@ -2,7 +2,8 @@ const express = require("express");
 const router = express.Router();
 const { verifyUserRole } = require("../controllers/cartController");
 const { placeOrder, getOrder } = require("../controllers/orderController");
+const { verifyToken } = require("../controllers/authController");
 
-router.route("/:userid/placeOrder").post(verifyUserRole, placeOrder);
-router.route("/:userid/showOrder").get(getOrder);
+router.route("/placeOrder").post(verifyToken, verifyUserRole, placeOrder);
+router.route("/showOrder").get(verifyToken, verifyUserRole, getOrder);
 module.exports = router;
